# iceberg-infra-example

./: .gitignore  README.md  docker-compose.yaml  lambda.Dockerfile  package.json
lib/: interfaces.ts  lambdaFunctionConstruct.ts  lambdaFunctionStack.ts  sqsConstruct.ts  sqsStack.ts  utils.ts
scripts/: build_images.sh
src/lambdas/iceberg_table_access/: .dockerignore  iceberg_table_access.py  pyproject.toml  table_definitions.json
